[package]
name = "photoGrid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["cargo"] }
femme = "2.2.1"
fltk = { version = "1.4.8", features = ["use-wayland", "fltk-bundled"] }
image = "0.24.6"
log = "0.4.19"
serde = { version = "1.0.175", features = ["serde_derive"] }
toml = "0.7.6"
